--- a/materials/cs1_practical_one-sample-wilcoxon.qmd
+++ b/materials/cs1_practical_one-sample-wilcoxon.qmd
@@ -1,7 +1,6 @@
 ---
 title: "Wilcoxon signed-rank test"
 ---
-
 ```{r}
 #| echo: false
 #| message: false
@@ -12,6 +11,7 @@ source(file = "setup_files/setup.R")
 ```{python}
 #| echo: false
 #| message: false
+import shutup;shutup.please()
 exec(open('setup_files/setup.py').read())
 ```
 
