--- a/materials/cs1_practical_two-sample-paired-t-test.qmd
+++ b/materials/cs1_practical_two-sample-paired-t-test.qmd
@@ -12,6 +12,7 @@ source(file = "setup_files/setup.R")
 ```{python}
 #| echo: false
 #| message: false
+import shutup;shutup.please()
 exec(open('setup_files/setup.py').read())
 ```
 
