--- a/materials/cs1_practical_two-sample-mann-whitney.qmd
+++ b/materials/cs1_practical_two-sample-mann-whitney.qmd
@@ -11,6 +11,7 @@ source(file = "setup_files/setup.R")
 ```{python}
 #| echo: false
 #| message: false
+import shutup;shutup.please()
 exec(open('setup_files/setup.py').read())
 ```
 
