--- a/materials/cs4_practical_linear-regression-grouped-data.qmd
+++ b/materials/cs4_practical_linear-regression-grouped-data.qmd
@@ -12,6 +12,7 @@ source(file = "setup_files/setup.R")
 ```{python}
 #| echo: false
 #| message: false
+import shutup;shutup.please()
 exec(open('setup_files/setup.py').read())
 ```
 
