Added color for stat_qq_line in python code
Small update

--- a/materials/cs1_practical_one-sample-t-test.qmd
+++ b/materials/cs1_practical_one-sample-t-test.qmd
@@ -664,7 +664,7 @@ pg.normality(dissolving_py.dissolving_time)
   ggplot(dissolving_py,
     aes(sample = "dissolving_time")) +
   stat_qq() +
-  stat_qq_line()
+  stat_qq_line(color="red")
 )
 ```
 :::
