--- a/materials/cs1_practical_one-sample-wilcoxon.qmd
+++ b/materials/cs1_practical_one-sample-wilcoxon.qmd
@@ -48,9 +48,6 @@ This test also considers a single sample, however for this test (in contrast to 
 #| eval: false
 # A collection of R packages designed for data science
 library(tidyverse)
-
-# Converts stats functions to a tidyverse-friendly format
-library(rstatix)
 ```
 
 ### Functions
@@ -59,7 +56,7 @@ library(rstatix)
 #| eval: false
 #| warning: false
 # Performs one and two sample Wilcoxon tests
-rstatix::wilcox_test()
+stats::wilcox.test()
 ```
 
 ## R
@@ -72,7 +69,7 @@ rstatix::wilcox_test()
 # Performs one- and two-sample Wilcoxon tests
 # on vectors of data; the latter is also known
 # as 'Mann-Whitney' test
-stats::wilcoxon.test()
+stats::wilcox.test()
 ```
 
 ## Python
@@ -121,8 +118,8 @@ Let's first determine the median, so we can use that to compare our data to.
 ```{r}
 # determine the median
 median_fishlength <- fishlengthDF %>% 
-  summarise(median_fishlength = median(length)) %>% 
-  pull(median_fishlength)
+    pull(length) %>% 
+    median()
 ```
 
 ```{r}
@@ -148,17 +145,9 @@ Let's first determine the median, so we can use that to compare our data to.
 median_fishlength <- median(fishlength_r)
 ```
 
-```{r, eval=FALSE}
-hist(fishlength_r, breaks = 10)
-abline(v = median_fishlength,
-       col = "red")
-
-boxplot(fishlength_r)
-```
-
 You get the following plots:
 
-```{r cs1-one-sample-wilcoxon-assumptions2, echo=FALSE}
+```{r}
 par(mfrow=c(1,2))
 hist(fishlength_r, breaks = 10)
 abline(v = median_fishlength,
@@ -206,20 +195,23 @@ Perform a one-sample, two-tailed Wilcoxon signed-rank test:
 
 ```{r}
 fishlengthDF %>% 
-  wilcox_test(length ~ 1,
-              mu = 20,
-              alternative = "two.sided")
+    pull(length) %>% 
+    wilcox.test(mu = 20,
+                alternative = "two.sided")
 ```
-
 The syntax is identical to the one-sample t-test we carried out earlier.
 
-1.  the `formula`, here we give it `length ~ 1` to indicate it is a one-sample test on `length`
-2.  the `mu` is the median to be tested under the null hypothesis, here it is 20
-3.  the `alternative` argument gives the type of alternative hypothesis and must be one of `two.sided`, `greater` or `less`. We have no prior assumptions on whether the alternative median fish length would be greater or less than 20, so we choose `two.sided`.
+-   The first argument must be a numerical vector of data values.
+-   The second argument must be a number and is the median to be tested under the null hypothesis.
+-   The third argument gives the type of alternative hypothesis and must be one of `two.sided`, `greater` or `less.`
+-   The first line gives a warning (not an error) message regarding the implementation of this test. This can be safely ignored in this case as the p-value is so small, but essentially, it's letting you know that some of the data values are identical to each other. This is not supposed to happen as we should be dealing with continuous data for this test, but in practice it's not something that we need to worry ourselves with.
+-   It then gives you the name of the test and `data:` reminds you what the data set was called (here it's the numerical `length` values coming from the pipe)
+-   Next are the two key outputs from the test:
 
--   the `statistic` column gives us the t-statistic of 67.5 (we'll need this for reporting)
--   the `n` column gives us the sample size of 29
--   the `p` column gives us the p-value of 0.0012
+    -   The calculated V statistic is 67.5
+    -   The p-value is 0.001222.
+
+-   The last line simply states the alternative hypothesis
 
 ## R
 
@@ -232,21 +224,16 @@ wilcox.test(fishlength_r,
 The syntax is identical to the one-sample t-test we carried out earlier.
 
 -   The first argument must be a numerical vector of data values.
-
 -   The second argument must be a number and is the median to be tested under the null hypothesis.
-
 -   The third argument gives the type of alternative hypothesis and must be one of `two.sided`, `greater` or `less.`
+-   The first line gives a warning (not an error) message regarding the implementation of this test. This can be safely ignored in this case as the p-value is so small, but essentially, it's letting you know that some of the data values are identical to each other. This is not supposed to happen as we should be dealing with continuous data for this test, but in practice it's not something that we need to worry ourselves with.
+-   It then gives you the name of the test and `data:` reminds you what the data set was called (here it's the numerical `length` values coming from the pipe)
+-   Next are the two key outputs from the test:
 
--   The first two lines give a warning (not an error) message regarding the implementation of this test. This can be safely ignored in this case as the p-value is so small, but essentially, it's letting you know that some of the data values are identical to each other. This is not supposed to happen as we should be dealing with continuous data for this test, but in practice it's not something that we need to worry ourselves with.
-
--   The 3rd line gives the name of the test and the 4th line reminds you what the data set was called
-
--   The 5th line contains the two key outputs from the test:
-
-    -   The calculated statistic is 67.5 (we'll need this for reporting)
+    -   The calculated V statistic is 67.5
     -   The p-value is 0.001222.
 
--   The 6th line simply states the alternative hypothesis
+-   The last line simply states the alternative hypothesis
 
 ## Python
 
@@ -263,11 +250,11 @@ The syntax is similar to what we did earlier:
 
 Again, the p-value is what we're most interested in. It gives the probability of us getting a sample such as ours if the null hypothesis were actually true. So, in this case since our p-value is less than 0.05 we can reject our null hypothesis and state that:
 
-> A one-sample Wilcoxon signed-rank test indicated that the median body length of male guppies ($\mu$ = 18.8 mm) differs significantly from 20 mm (V = 67.5, n = 29, p = 0.0012).
+> A one-sample Wilcoxon signed-rank test indicated that the median body length of male guppies ($\tilde{x}$ = 18.8 mm) differs significantly from 20 mm (p = 0.0012).
 
 \
 
-The above sentence is an adequate concluding statement for this test and is what we would write in any paper or report. Note that we have included (in brackets) information on the median value of the group ($\mu$ = 18.8 mm), the test statistic (V = 67.5), the number of observations (n = 29), and the p-value (p = 0.0012).
+The above sentence is an adequate concluding statement for this test and is what we would write in any paper or report. Note that we have included (in brackets) information on the median value of the group ($\tilde{x}$ = 18.8 mm) and the p-value (p = 0.0012). Keep in mind that, when publishing, you'd also submit your data and scripts, so people can follow your analysis.
 
 ## Exercise: Gastric juices (revisited)
 
@@ -292,19 +279,29 @@ From the box plot from the previous exercise we already know that the data are s
 
 ### Wilcoxon signed-rank test
 
-Performing the test:
+Calculating the median and performing the test:
 
 ::: {.panel-tabset group="language"}
 ## tidyverse
 
 ```{r}
 dissolving %>% 
-  wilcox_test(dissolving_time ~ 1,
-              mu = 45,
-              alternative = "two.sided")
+    pull(dissolving_time) %>% 
+    median()
+```
+
+```{r}
+dissolving %>% 
+    pull(dissolving_time) %>% 
+    wilcox.test(mu = 45,
+                alternative = "two.sided")
 ```
 
 ## R
+
+```{r}
+median(dissolving_r$dissolving_time)
+```
 
 ```{r}
 wilcox.test(dissolving_r$dissolving_time,
@@ -315,12 +312,16 @@ wilcox.test(dissolving_r$dissolving_time,
 ## Python
 
 ```{python}
+dissolving_py.dissolving_time.median()
+```
+
+```{python}
 pg.wilcoxon(dissolving_py.dissolving_time - 45,
             alternative = "two-sided")
 ```
 :::
 
-> A one-sample Wilcoxon-signed rank test indicated that the median dissolving time of the drug is not significantly different from 45 s (V=22, n=8 , p=0.64)
+> A one-sample Wilcoxon-signed rank test indicated that the median dissolving time of the drug is not significantly different from 45 s ($\tilde{x}$ = 45.35 , p=0.64)
 
 \
 
